# bifrost

./: .gitignore  .tool-versions  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bifrost-implementation-plan.md  catalog-info.yaml  flake.nix  mkdocs.yml  rust-toolchain.toml  seed-issues.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release.yml
crates/bifrost-adapters/: Cargo.toml
crates/bifrost-adapters/src/: ado_auth.rs  azure_devops.rs  bamboo.rs  baseline.rs  bitbucket.rs  board.rs  circleci.rs  convert.rs  docker_importer.rs  github_auth.rs  gitlab.rs  importer.rs  jenkins.rs  lib.rs  orchestrator.rs  publisher.rs  source.rs  source_factory.rs  test_fixtures.rs  travis.rs  validate.rs
crates/bifrost-adapters/tests/: conformance.rs
crates/bifrost-adapters/tests/fixtures/: test_app_key.pem  test_app_key.pub.pem
crates/bifrost-api/: Cargo.toml
crates/bifrost-api/src/: auth.rs  jobs.rs  main.rs  metrics.rs  pdf.rs  sample.rs  secrets.rs  store.rs
crates/bifrost-api/tests/fixtures/: test_oidc_key.pem  test_oidc_key.pub.pem
crates/bifrost-cli/: Cargo.toml
crates/bifrost-cli/src/: main.rs
crates/bifrost-core/: Cargo.toml
crates/bifrost-core/src/: agent_instructions.rs  assemble.rs  attest.rs  audit.rs  audit_log.rs  completeness.rs  connection.rs  conversion.rs  forecast.rs  gap.rs  gei.rs  identity.rs  ingestion.rs  lib.rs  model.rs  parity.rs  program.rs  program_board.rs  proposal.rs  readiness.rs  report.rs  risk.rs  runbook.rs  source_stats.rs
crates/bifrost-llm/: Cargo.toml
crates/bifrost-llm/src/: anthropic.rs  azure_openai.rs  copilot.rs  cost.rs  gemini.rs  lib.rs  ollama.rs  openai_compatible.rs  resilience.rs  vertex.rs
crates/bifrost-llm/tests/: prompt_eval.rs
crates/bifrost-llm/tests/golden/: gap-fill.v1.prompt.txt
crates/bifrost-mcp/: Cargo.toml  README.md
crates/bifrost-mcp/src/: main.rs
deploy/: README.md  docker-compose.yml
deploy/docker/: api.Dockerfile  portal-nginx.conf  portal.Dockerfile
deploy/helm/bifrost/: .helmignore  Chart.yaml  values.yaml
deploy/helm/bifrost/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-pvc.yaml  api-service.yaml  ingress.yaml  portal-configmap.yaml  portal-deployment.yaml  portal-service.yaml  secret.yaml  serviceaccount.yaml
docs/: CNAME  _config.yml  architecture.md  blog.md  enterprise.md  glossary.md  golden-path.md  index.md  mcp.md  plan.md  roadmap.md  screenshots.md  showcase.md
docs/_includes/: head_custom.html
docs/_posts/: 2026-06-12-airgapped-with-ollama.md  2026-06-12-pre-flight-and-assistant.md  2026-06-12-state-of-bifrost.md
docs/_sass/color_schemes/: gruvbox-dark.scss
fixtures/: audit_summary.md  dry_run_converted.yml  forecast_report.md  importer_converted_workflow.yml  importer_pipeline_config.json  source_pipeline.yml
fixtures/ado/: definition.json  projects.json  serviceendpoints.json  variablegroups.json
fixtures/bamboo/: plans.json  projects.json  variables.json
fixtures/bitbucket/: repositories.json  variables.json
fixtures/circleci/: envvars.json  projects.json
fixtures/gitlab/: groups.json  projects.json  variables.json
fixtures/jenkins/: credentials.json  jobs.json
fixtures/prompts/recorded/: clean-snake.txt  fenced-camel-prose.txt  object-yaml-with-stray-score.txt
fixtures/travis/: env_vars.json  repos.json
portal/: index.html  package-lock.json  package.json  vite.config.ts
portal/scripts/: screenshots.mjs  showcase-github.mjs
portal/src/: App.tsx  index.css  main.tsx  types.ts
portal/src/api/: client.ts
portal/src/components/: Assessment.tsx  Board.tsx  ChatPopout.tsx  Completeness.tsx  Connections.tsx  DocsPage.tsx  Forecast.tsx  Header.tsx  Heatmap.tsx  Logo.tsx  OnboardingWizard.tsx  PaletteToggle.tsx  PipelineDrawer.tsx  PipelineTable.tsx  Program.tsx  ProgramBoard.tsx  ProposalPanel.tsx  Readiness.tsx  ReviewQueue.tsx  RiskBadge.tsx  Routing.tsx  Sidebar.tsx  StatCards.tsx  ThemeToggle.tsx
portal/src/data/: portfolio.ts
portal/src/lib/: format.ts  monaco.ts  theme.ts
prompts/: gap-fill.v1.md
showcase/: README.md  transcript.md  voiceover.md
showcase/scripts/: fix_outro.sh  migrate.sh  showcase-portal.mjs  stitch.sh  term.sh
spikes/: copilot-github-models.md
techdocs/: architecture.md  getting-started.md  index.md  roadmap.md
