[workspace]
resolver = "2"
members = [
    "crates/bifrost-core",
    "crates/bifrost-adapters",
    "crates/bifrost-llm",
    "crates/bifrost-api",
    "crates/bifrost-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/olafkfreund/bifrost"
authors = ["Olaf K. Freund <olaf@freundcloud.com>"]

# Shared dependency versions, referenced by member crates via `workspace = true`.
[workspace.dependencies]
bifrost-core = { path = "crates/bifrost-core" }
bifrost-adapters = { path = "crates/bifrost-adapters" }
bifrost-llm = { path = "crates/bifrost-llm" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "process", "fs", "sync"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }

# Deny warnings workspace-wide so CI (clippy -D warnings) stays green by default.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "forbid"
