[package]
name = "bifrost-adapters"
description = "Source adapter trait + Azure DevOps adapter, and the GitHub Actions Importer wrapper."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bifrost-core = { workspace = true }

[lints]
workspace = true
