[package]
name = "bifrost-api"
description = "Bifrost control-plane API (axum) — orgs, audits, pipelines, proposals, and SSE."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bifrost-core = { workspace = true }
bifrost-adapters = { workspace = true }
bifrost-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
# Pure-Rust PDF for the migration report (#221). Built-in Helvetica — no font
# files to bundle, no external tools, so it works air-gapped.
printpdf = "0.7"

[dev-dependencies]
# Router-level tests (auth middleware): drive the Service directly.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
