[package]
name = "bifrost-cli"
description = "Bifrost CLI — audit, convert, and report."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bifrost"
path = "src/main.rs"

[dependencies]
bifrost-core = { workspace = true }
bifrost-adapters = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
