[package]
name = "bifrost-llm"
description = "LlmProvider trait and provider implementations (Anthropic, Gemini, Copilot, Ollama)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bifrost-core = { workspace = true }

[lints]
workspace = true
